[gd_scene load_steps=8 format=3 uid="uid://c45uepyeb15ww"]

[ext_resource type="Script" uid="uid://b7d0kh7753awm" path="res://FPS/player.gd" id="1_eu0rs"]
[ext_resource type="AudioStream" uid="uid://dxy4fg4fmiiaj" path="res://FPS/footstep.wav" id="2_cvm7v"]
[ext_resource type="PackedScene" uid="uid://cv71sqxea85pk" path="res://Portals/portal_gun.tscn" id="3_eu0rs"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_oul6g"]

[sub_resource type="SphereShape3D" id="SphereShape3D_m18y8"]

[sub_resource type="SphereShape3D" id="SphereShape3D_uvqrr"]
radius = 0.48

[sub_resource type="CapsuleMesh" id="CapsuleMesh_eu0rs"]

[node name="PlayerPortals" type="CharacterBody3D" node_paths=PackedStringArray("current_gun") groups=["player"]]
process_mode = 1
collision_mask = 32769
script = ExtResource("1_eu0rs")
current_gun = NodePath("CamH/Camera3D/GunMount/PortalGun")
portal_mode = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_oul6g")
debug_color = Color(0, 0.6, 0.69803923, 0.9647059)

[node name="AudioStreamPlayer3DFootstep" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_cvm7v")
unit_size = 3.0
max_db = 0.0
max_distance = 3.0

[node name="CamH" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Camera3D" type="Camera3D" parent="CamH"]
cull_mask = 1048573
near = 0.002

[node name="GunMount" type="Node3D" parent="CamH/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.35, -0.305, -0.8)

[node name="PortalGun" parent="CamH/Camera3D/GunMount" instance=ExtResource("3_eu0rs")]

[node name="GunSpotScope" type="Node3D" parent="CamH/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.8)

[node name="GunSpotDefault" type="Node3D" parent="CamH/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.35, -0.30500007, -0.8)

[node name="RayCast3DGun" type="RayCast3D" parent="CamH/Camera3D"]
target_position = Vector3(0, 0, -1000)

[node name="CollisionShape3DCrouch" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_m18y8")
disabled = true

[node name="CollisionShape3DCrouchAir" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5000001, 0)
shape = SubResource("SphereShape3D_m18y8")
disabled = true

[node name="ShapeCast3DUncrouchUpTest" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("SphereShape3D_uvqrr")
target_position = Vector3(0, 1, 0)
max_results = 1

[node name="ShapeCast3DUncrouchDownTest" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("SphereShape3D_uvqrr")
max_results = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_eu0rs")
